fix lighthouse sufficient contrast ratio

--- a/src/css/scss/helpers/_utilities.scss
+++ b/src/css/scss/helpers/_utilities.scss
@@ -354,7 +354,7 @@ a {
 
 .custom-input-group {
   .input-group-text {
-    color: #6c757d;
+    color: #333;
     background-color: #f8f9fa;
   }
 }
